--- a/package.json
+++ b/package.json
@@ -3,13 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "fb": "^2.0.0",
+    "file-system": "^2.2.2",
+    "jquery": "^3.2.1",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "path": "^0.12.7",
+    "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
+    "react-images": "^0.5.14",
+    "react-photo-gallery": "^6.0.22",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.0.17"
+    "react-scripts": "^1.0.17",
+    "request": "^2.83.0",
+    "serve-favicon": "^2.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
