--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
+    "cron": "^1.3.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "fb": "^2.0.0",
